--- a/branch.Win/branch.Win.csproj
+++ b/branch.Win/branch.Win.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryMonitor.cs" />
+    <Compile Include="Watchers\IRepositoryWatcher.cs" />
+    <Compile Include="Watchers\WindowsRepositoryWatcher.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
