--- a/RepoZ.Win/RepoZ.Win.csproj
+++ b/RepoZ.Win/RepoZ.Win.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crawlers\GravellPathCrawler.cs" />
+    <Compile Include="Crawlers\IPathCrawler.cs" />
     <Compile Include="Crawlers\WindowsPathCrawler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -64,11 +65,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IPathProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryMonitor.cs" />
     <Compile Include="Watchers\IRepositoryWatcher.cs" />
     <Compile Include="Watchers\WindowsRepositoryWatcher.cs" />
+    <Compile Include="WindowsDriveEnumerator.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
