--- a/RepoZ.Shared/RepoZ.Shared.csproj
+++ b/RepoZ.Shared/RepoZ.Shared.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Git\IRepositoryHelper.cs" />
     <Compile Include="Git\RepositoryHelper.cs" />
+    <Compile Include="Git\RepositoryInfo.cs" />
     <Compile Include="PathFinding\IPathFinder.cs" />
     <Compile Include="PathFinding\WindowsExplorerPathFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
