--- a/RepoZ.Win/RepoZ.Win.csproj
+++ b/RepoZ.Win/RepoZ.Win.csproj
@@ -57,7 +57,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crawlers\GravellPathCrawler.cs" />
-    <Compile Include="Crawlers\IPathCrawler.cs" />
     <Compile Include="Crawlers\WindowsPathCrawler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -65,12 +64,14 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IPathProvider.cs" />
+    <Compile Include="Git\RepositoryHelper.cs" />
+    <Compile Include="PathFinding\WindowsExplorerPathFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryMonitor.cs" />
-    <Compile Include="Watchers\IRepositoryWatcher.cs" />
     <Compile Include="Watchers\WindowsRepositoryWatcher.cs" />
+    <Compile Include="WindowFinder.cs" />
+    <Compile Include="WindowHelper.cs" />
     <Compile Include="WindowsDriveEnumerator.cs" />
     <Compile Include="WindowsExplorerHandler.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -100,9 +101,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RepoZ.Shared\RepoZ.Shared.csproj">
-      <Project>{cb5943a5-c729-4205-8fd8-9a682797ef72}</Project>
-      <Name>RepoZ.Shared</Name>
+    <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
+      <Project>{8f74519b-b72d-4a5e-b20b-723543676e5e}</Project>
+      <Name>RepoZ.Api</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
