--- a/RepoZ.UI.Desktop/packages.config
+++ b/RepoZ.UI.Desktop/packages.config
@@ -7,4 +7,5 @@
   <package id="Eto.Platform.Mac.Template" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Platform.Windows" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Platform.Wpf" version="2.3.0" targetFramework="net461" />
+  <package id="TinyIoC" version="1.3" targetFramework="net452" developmentDependency="true" />
 </packages>
