--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -40,8 +40,9 @@
     <Compile Include="IO\IPathCrawler.cs" />
     <Compile Include="IO\IPathFinder.cs" />
     <Compile Include="IO\IPathProvider.cs" />
-    <Compile Include="Git\IRepositoryHelper.cs" />
-    <Compile Include="Git\IRepositoryWatcher.cs" />
+    <Compile Include="Git\IRepositoryReader.cs" />
+    <Compile Include="Git\IRepositoryObserver.cs" />
+    <Compile Include="Git\IRepositoryMonitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\RepositoryInfo.cs" />
   </ItemGroup>
