--- a/RepoZ.UI.Desktop/RepoZ.UI.Desktop.csproj
+++ b/RepoZ.UI.Desktop/RepoZ.UI.Desktop.csproj
@@ -63,6 +63,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
+      <Project>{8f74519b-b72d-4a5e-b20b-723543676e5e}</Project>
+      <Name>RepoZ.Api</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RepoZ.UI\RepoZ.UI.csproj">
       <Project>{96888219-0d2c-4c62-b32c-a51d8181ffb8}</Project>
       <Name>RepoZ.UI</Name>
@@ -71,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
