--- a/RepoZ.Win/RepoZ.Win.csproj
+++ b/RepoZ.Win/RepoZ.Win.csproj
@@ -56,24 +56,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Crawlers\GravellPathCrawler.cs" />
-    <Compile Include="Crawlers\WindowsPathCrawler.cs" />
+    <Compile Include="IO\GravellPathCrawler.cs" />
+    <Compile Include="IO\WindowsPathCrawler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Git\RepositoryHelper.cs" />
-    <Compile Include="PathFinding\WindowsExplorerPathFinder.cs" />
+    <Compile Include="Git\WindowsRepositoryReader.cs" />
+    <Compile Include="PInvoke\WindowsExplorerPathFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryMonitor.cs" />
-    <Compile Include="Watchers\WindowsRepositoryWatcher.cs" />
-    <Compile Include="WindowFinder.cs" />
-    <Compile Include="WindowHelper.cs" />
-    <Compile Include="WindowsDriveEnumerator.cs" />
-    <Compile Include="WindowsExplorerHandler.cs" />
+    <Compile Include="Git\WindowsRepositoryMonitor.cs" />
+    <Compile Include="Git\WindowsRepositoryObserver.cs" />
+    <Compile Include="PInvoke\WindowFinder.cs" />
+    <Compile Include="PInvoke\WindowHelper.cs" />
+    <Compile Include="IO\WindowsDriveEnumerator.cs" />
+    <Compile Include="PInvoke\WindowsExplorerHandler.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
