--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -41,6 +41,7 @@
     <Compile Include="IO\IPathCrawler.cs" />
     <Compile Include="IO\IPathCrawlerFactory.cs" />
     <Compile Include="IO\IPathFinder.cs" />
+    <Compile Include="IO\IPathNavigator.cs" />
     <Compile Include="IO\IPathProvider.cs" />
     <Compile Include="Git\IRepositoryReader.cs" />
     <Compile Include="Git\IRepositoryObserver.cs" />
