--- a/RepoZ.UI.Mac/RepoZ.UI.Mac.csproj
+++ b/RepoZ.UI.Mac/RepoZ.UI.Mac.csproj
@@ -87,8 +87,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="MacRepositoryMonitor.cs" />
-    <Compile Include="MacPathNavigator.cs" />
+    <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RepoZ.UI\RepoZ.UI.csproj">
@@ -98,6 +97,10 @@
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
       <Project>{8F74519B-B72D-4A5E-B20B-723543676E5E}</Project>
       <Name>RepoZ.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepoZ.Api.Mac\RepoZ.Api.Mac.csproj">
+      <Project>{A314F9CB-5108-4065-AFB6-42799099B188}</Project>
+      <Name>RepoZ.Api.Mac</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
