--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -33,6 +33,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\MacRepositoryMonitor.cs" />
     <Compile Include="IO\MacPathNavigator.cs" />
+    <Compile Include="IO\MacDriveEnumerator.cs" />
+    <Compile Include="IO\GravellPathCrawler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Git\" />
