--- a/RepoZ.Api.Win/RepoZ.Api.Win.csproj
+++ b/RepoZ.Api.Win/RepoZ.Api.Win.csproj
@@ -56,9 +56,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Git\WindowsRepositoryObserverFactory.cs" />
-    <Compile Include="IO\GravellPathCrawler.cs" />
-    <Compile Include="IO\WindowsPathCrawler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,16 +63,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Git\WindowsRepositoryReader.cs" />
-    <Compile Include="IO\WindowsPathCrawlerFactory.cs" />
     <Compile Include="IO\WindowsPathNavigator.cs" />
     <Compile Include="PInvoke\WindowsExplorerPathFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Git\WindowsRepositoryMonitor.cs" />
-    <Compile Include="Git\WindowsRepositoryObserver.cs" />
     <Compile Include="PInvoke\WindowFinder.cs" />
     <Compile Include="PInvoke\WindowHelper.cs" />
-    <Compile Include="IO\WindowsDriveEnumerator.cs" />
     <Compile Include="PInvoke\WindowsExplorerHandler.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -104,6 +97,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Repoz.Api.Default\Repoz.Api.Default.csproj">
+      <Project>{35c4f1c4-e3b3-4876-9871-9ad5eb495f65}</Project>
+      <Name>Repoz.Api.Default</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
       <Project>{8f74519b-b72d-4a5e-b20b-723543676e5e}</Project>
       <Name>RepoZ.Api</Name>
