partially revert Default-assembly

--- a/RepoZ.Api.Win/RepoZ.Api.Win.csproj
+++ b/RepoZ.Api.Win/RepoZ.Api.Win.csproj
@@ -62,7 +62,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Git\DefaultRepositoryMonitor.cs" />
+    <Compile Include="Git\DefaultRepositoryObserver.cs" />
+    <Compile Include="Git\DefaultRepositoryObserverFactory.cs" />
     <Compile Include="Git\WindowsRepositoryReader.cs" />
+    <Compile Include="IO\DefaultDriveEnumerator.cs" />
+    <Compile Include="IO\DefaultPathCrawler.cs" />
+    <Compile Include="IO\DefaultPathCrawlerFactory.cs" />
+    <Compile Include="IO\DefaultPathNavigator.cs" />
+    <Compile Include="IO\GravellPathCrawler.cs" />
     <Compile Include="IO\WindowsPathNavigator.cs" />
     <Compile Include="PInvoke\WindowsExplorerPathFinder.cs" />
     <Compile Include="Program.cs" />
@@ -97,10 +105,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Repoz.Api.Default\Repoz.Api.Default.csproj">
-      <Project>{35c4f1c4-e3b3-4876-9871-9ad5eb495f65}</Project>
-      <Name>Repoz.Api.Default</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
       <Project>{8f74519b-b72d-4a5e-b20b-723543676e5e}</Project>
       <Name>RepoZ.Api</Name>
