--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Git\IRepositoryObserverFactory.cs" />
+    <Compile Include="IO\IPathActionProvider.cs" />
     <Compile Include="IO\IPathCrawler.cs" />
     <Compile Include="IO\IPathCrawlerFactory.cs" />
     <Compile Include="IO\IPathFinder.cs" />
@@ -46,6 +47,7 @@
     <Compile Include="Git\IRepositoryReader.cs" />
     <Compile Include="Git\IRepositoryObserver.cs" />
     <Compile Include="Git\IRepositoryMonitor.cs" />
+    <Compile Include="IO\PathAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\RepositoryInfo.cs" />
   </ItemGroup>
