Make Mac solution compile after Win refactorings

--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -38,8 +38,8 @@
     <Compile Include="IO\DefaultDriveEnumerator.cs" />
     <Compile Include="IO\DefaultPathCrawler.cs" />
     <Compile Include="IO\DefaultPathCrawlerFactory.cs" />
-    <Compile Include="IO\DefaultPathNavigator.cs" />
     <Compile Include="IO\GravellPathCrawler.cs" />
+    <Compile Include="IO\MacPathActionProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Git\" />
