--- a/RepoZ.UI.Mac/packages.config
+++ b/RepoZ.UI.Mac/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Eto.Forms" version="2.3.0" targetFramework="net451" />
   <package id="Eto.Platform.XamMac2" version="2.3.0" targetFramework="net451" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.165" targetFramework="net45" />
+  <package id="LibGit2Sharp.Portable" version="0.24.10" targetFramework="net45" />
   <package id="TinyIoC" version="1.3" targetFramework="net45" developmentDependency="true" />
 </packages>
