--- a/RepoZ.UI.Win/RepoZ.UI.Win.csproj
+++ b/RepoZ.UI.Win/RepoZ.UI.Win.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinyIoC.cs" />
+    <Compile Include="UIErrorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
