--- a/RepoZ.UI.Win/packages.config
+++ b/RepoZ.UI.Win/packages.config
@@ -5,5 +5,7 @@
   <package id="Eto.Platform.Gtk3" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Platform.Windows" version="2.3.0" targetFramework="net461" />
   <package id="Eto.Platform.Wpf" version="2.3.0" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
   <package id="TinyIoC" version="1.3" targetFramework="net452" developmentDependency="true" />
 </packages>
