Add a working yet functional Wpf UI showing the repositories

--- a/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
+++ b/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
@@ -34,6 +34,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="MaterialDesignColors, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.1.2\lib\net45\MaterialDesignColors.dll</HintPath>
