--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Git\IRepositoryActionProvider.cs" />
     <Compile Include="Git\IRepositoryWriter.cs" />
     <Compile Include="Git\RepositoryView.cs" />
+    <Compile Include="Git\StatusCharacterMap.cs" />
     <Compile Include="Git\StatusCompressor.cs" />
     <Compile Include="IO\IPathCrawler.cs" />
     <Compile Include="IO\IPathCrawlerFactory.cs" />
