--- a/RepoZ.UI.Win.Wpf/packages.config
+++ b/RepoZ.UI.Win.Wpf/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
