Introduce a repository cache
This commit introduces a cache which saves found repositories on the file system so that these cache entries can be loaded on startup while the intial scan for repositories is still running.
Fixes #18

--- a/RepoZ.Api.Win/RepoZ.Api.Win.csproj
+++ b/RepoZ.Api.Win/RepoZ.Api.Win.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Git\WindowsRepositoryCache.cs" />
+    <Compile Include="Git\FileRepositoryCache.cs" />
     <Compile Include="Git\DefaultRepositoryMonitor.cs" />
     <Compile Include="Git\DefaultRepositoryObserver.cs" />
     <Compile Include="Git\DefaultRepositoryObserverFactory.cs" />
