--- a/RepoZ.UI.Mac/RepoZ.UI.Mac.csproj
+++ b/RepoZ.UI.Mac/RepoZ.UI.Mac.csproj
@@ -56,12 +56,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Mac" />
-    <Reference Include="Eto">
-      <HintPath>..\packages\Eto.Forms.2.3.0\lib\net45\Eto.dll</HintPath>
-    </Reference>
-    <Reference Include="Eto.XamMac2">
-      <HintPath>..\packages\Eto.Platform.XamMac2.2.3.0\lib\net45\Eto.XamMac2.dll</HintPath>
-    </Reference>
     <Reference Include="LibGit2Sharp">
       <HintPath>..\packages\LibGit2Sharp.Portable.0.24.10\lib\net40\LibGit2Sharp.dll</HintPath>
     </Reference>
@@ -94,10 +88,6 @@
     <Compile Include="TinyIoC.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RepoZ.UI\RepoZ.UI.csproj">
-      <Project>{5925C073-A5AA-4B9D-92E5-CAC8B5309635}</Project>
-      <Name>RepoZ.UI</Name>
-    </ProjectReference>
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
       <Project>{8F74519B-B72D-4A5E-B20B-723543676E5E}</Project>
       <Name>RepoZ.Api</Name>
@@ -105,6 +95,10 @@
     <ProjectReference Include="..\RepoZ.Api.Mac\RepoZ.Api.Mac.csproj">
       <Project>{A314F9CB-5108-4065-AFB6-42799099B188}</Project>
       <Name>RepoZ.Api.Mac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RepoZ.Api.Common\RepoZ.Api.Common.csproj">
+      <Project>{8104948C-EB24-496B-B15B-D769535B7DAB}</Project>
+      <Name>RepoZ.Api.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
