--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -35,16 +35,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Git\MacRepositoryReader.cs" />
-    <Compile Include="Git\DefaultRepositoryMonitor.cs" />
-    <Compile Include="Git\DefaultRepositoryObserver.cs" />
-    <Compile Include="Git\DefaultRepositoryObserverFactory.cs" />
-    <Compile Include="IO\DefaultDriveEnumerator.cs" />
-    <Compile Include="IO\DefaultPathCrawler.cs" />
-    <Compile Include="IO\DefaultPathCrawlerFactory.cs" />
-    <Compile Include="IO\GravellPathCrawler.cs" />
+    <Compile Include="IO\MacDriveEnumerator.cs" />
     <Compile Include="IO\MacRepositoryActionProvider.cs" />
-    <Compile Include="Git\MacRepositoryWriter.cs" />
+    <Compile Include="Git\MacRepositoryCache.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Git\" />
