--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -38,6 +38,7 @@
     <Compile Include="IO\MacDriveEnumerator.cs" />
     <Compile Include="IO\MacRepositoryActionProvider.cs" />
     <Compile Include="Git\MacRepositoryCache.cs" />
+    <Compile Include="IO\MacPathSkipper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Git\" />
